tailwind: Remove any usage of .list-reset

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -272,7 +272,7 @@ block content
         span.block.sm_inline.whitespace-no-wrap Designed and built by
           a(href="https://www.algolia.com/")
             img.align-top.pl-05(src="assets/algolia-logo.svg", alt="search by Algolia", width=100)
-      ul.list-reset.inline-block.text-2.mb-3
+      ul.inline-block.text-2.mb-3
         li.p-1.w-100.md_w-auto.inline-block
           a(href="https://github.com/algolia/docsearch/blob/master/LICENSE") Code licensed under MIT
         li.p-1.w-100.md_w-auto.inline-block
