--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -24,7 +24,7 @@ block content
           each category in sidebar
             .flcnw.flspa.sm_flex-auto.sm_w-33.sm_p-1.md_w-100.md_p-0
               .category.text-nebula.poppins.uppercase.mb-05x.text-1x=category.title
-              ul.list-reset.mb-2
+              ul.mb-2
                 each page in category.pages
                   - var isCurrent = current.url === page.url
                   - var additionalClasses = isCurrent ? 'current-page text-nebula' : 'text-solstice'
@@ -32,7 +32,7 @@ block content
                     a.block.py-0x(href=page.url, class=additionalClasses)=page.title
                     - var hasSubLinks = (page.headings && page.headings.length)
                     if hasSubLinks
-                      ul.list-reset.pl-1.text-1
+                      ul.pl-1.text-1
                         each heading in page.headings
                           li
                             a.block.py-0x.text-telluric(href=`${page.url}#${heading.anchor}`)=heading.title
