tailwind: Replace .pin-{side} with .{top|left|bottom|right|inset}-{value}

--- a/docs/src/_includes/header.pug
+++ b/docs/src/_includes/header.pug
@@ -1,4 +1,4 @@
-.header.fixed.pin-t.w-100.h-3.z-5.bg-white-pure
+.header.fixed.top-0.w-100.h-3.z-5.bg-white-pure
   .max-w-xl.m-auto.h-100.flex.flrnw
     //- Algolia logo
     .hidden.sm_flex.fln.flcnw.flc
@@ -12,7 +12,7 @@
     .hidden.lg_flex.custom-community-link.fln.flcnw.flc.px-0x.relative
       a.cursor-pointer.text-0(href="https://community.algolia.com/", target="_blank")
         img.h-1.sm_h-1x.lg_h-2(src="assets/community/community-logo.svg", alt="Algolia Community")
-      .custom-community-projects.hidden.sm_block.absolute.z-5.pin-t.mt-3.ml-3.border.border-proton.rounded-auto.bg-white-pure.shadow-1
+      .custom-community-projects.hidden.sm_block.absolute.z-5.top-0.mt-3.ml-3.border.border-proton.rounded-auto.bg-white-pure.shadow-1
         .flex.flrw.pt-0x
           a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline(href="https://community.algolia.com/talksearch/")
             .fln.bg-blue.rounded-auto.w-2x.h-2x
@@ -56,7 +56,7 @@
     .flex.fla.flrnw.flrcv.flrar.ml-2
       .w-100.flrnw.flex.flrar
         .custom-search-wrapper.fln.h-60.w-100.rounded-auto.relative
-          label.absolute.pin-left.z-1.w-1.h-100.ml-05.text-solstice.fill-current.cursor-pointer(for="docsearch")
+          label.absolute.left-0.z-1.w-1.h-100.ml-05.text-solstice.fill-current.cursor-pointer(for="docsearch")
             include ../assets/icons/magnifying-glass.svg
           input.custom-search-input.w-100.h-2x.leading-h-2x.outline-none.text-solstice.pl-2.rounded-auto.bg-moon.focus_bg-moon--1#docsearch(placeholder="Search the docs...")
     
