--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -18,7 +18,7 @@ block nav
 block content
   .bgtb-moon-white-pure.relative
     .md_flex.max-w-lg.m-auto
-      .navigation-sidebar.sticky.pin-t.top-3.h-100vh-3.overflow-y-auto.hidden.md_block.bg-white.pl-1
+      .navigation-sidebar.sticky.top-0.top-3.h-100vh-3.overflow-y-auto.hidden.md_block.bg-white.pl-1
         // Adding subsections from markdown
         .pt-2.w-5.m-auto.sm_flex.sm_w-90.md_block.md_w-100
           each category in sidebar
