--- a/docs/src/_styles/debug.css
+++ b/docs/src/_styles/debug.css
@@ -5,7 +5,7 @@
 }
 .debug:before {
   content: "N/A";
-  @apply absolute pin-t pin-l;
+  @apply absolute top-0 left-0;
   @apply bg-neptune-2 bold text-white;
   @apply p-0x;
 }
