tailwind:  cannot be used with .top-0 because .top-0 is included in multiple rulesets.

--- a/docs/src/_styles/debug.css
+++ b/docs/src/_styles/debug.css
@@ -5,7 +5,7 @@
 }
 .debug:before {
   content: "N/A";
-  @apply absolute top-0 left-0;
+  @apply absolute;
   @apply bg-neptune-2 bold text-white;
   @apply p-0x;
 }
