tailwind: migrate to v1 (#807)
* npm install tailwindcss@^1.0 --save-dev

* tailwind: update config

* tailwind: Move all design-related top-level keys into a new section called theme

* Rename modules to variants

* tailwind: Move your options settings to the top-level

* tailwind: Move your negativeMargin config to margin

* tailwind: Update the sections under theme to their new names

* tailwind: Update the sections under variants to their new names

* tailwind: Replace @tailwind preflight with @tailwind base

* tailwind: Remove any usage of .list-reset

* tailwind: Replace .pin-{side} with .{top|left|bottom|right|inset}-{value}

* tailwind:  cannot be used with .top-0 because .top-0 is included in multiple rulesets.

--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -18,13 +18,13 @@ block nav
 block content
   .bgtb-moon-white-pure.relative
     .md_flex.max-w-lg.m-auto
-      .navigation-sidebar.sticky.pin-t.top-3.h-100vh-3.overflow-y-auto.hidden.md_block.bg-white.pl-1
+      .navigation-sidebar.sticky.top-0.top-3.h-100vh-3.overflow-y-auto.hidden.md_block.bg-white.pl-1
         // Adding subsections from markdown
         .pt-2.w-5.m-auto.sm_flex.sm_w-90.md_block.md_w-100
           each category in sidebar
             .flcnw.flspa.sm_flex-auto.sm_w-33.sm_p-1.md_w-100.md_p-0
               .category.text-nebula.poppins.uppercase.mb-05x.text-1x=category.title
-              ul.list-reset.mb-2
+              ul.mb-2
                 each page in category.pages
                   - var isCurrent = current.url === page.url
                   - var additionalClasses = isCurrent ? 'current-page text-nebula' : 'text-solstice'
@@ -32,7 +32,7 @@ block content
                     a.block.py-0x(href=page.url, class=additionalClasses)=page.title
                     - var hasSubLinks = (page.headings && page.headings.length)
                     if hasSubLinks
-                      ul.list-reset.pl-1.text-1
+                      ul.pl-1.text-1
                         each heading in page.headings
                           li
                             a.block.py-0x.text-telluric(href=`${page.url}#${heading.anchor}`)=heading.title
