correct GitHub capitalisation on homepage footer

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -276,7 +276,7 @@ block content
         li.p-1.w-100.md_w-auto.inline-block
           a(href="https://github.com/algolia/docsearch/blob/master/LICENSE") Code licensed under MIT
         li.p-1.w-100.md_w-auto.inline-block
-          a(href="https://github.com/algolia/docsearch") Github
+          a(href="https://github.com/algolia/docsearch") GitHub
         li.p-1.w-100.md_w-auto.inline-block
           a(href="https://github.com/algolia/docsearch/issues") Issues
         li.p-1.w-100.md_w-auto.inline-block
