fix: make sure the magnifying glass icon from the input is at the right place

--- a/docs/src/_styles/components.css
+++ b/docs/src/_styles/components.css
@@ -275,3 +275,7 @@
       50px 0 0 rgba(236, 139, 99, 0.5);
   }
 }
+
+.docsearch-live-demo-input-wrapper button.searchbox__submit > svg {
+  display: inline;
+}
