--- a/docs/src/_styles/components.css
+++ b/docs/src/_styles/components.css
@@ -74,7 +74,6 @@
   background-image: url("assets/bg-footer.svg");
   background-position: 100% 100%;
   height: 500px;
-
 }
 
 /* Logo slider (gslide) */
@@ -274,4 +273,8 @@
     box-shadow: 25px 0 0 rgba(58, 178, 189, 0.5),
       50px 0 0 rgba(236, 139, 99, 0.5);
   }
+}
+
+.docsearch-live-demo-input-wrapper button.searchbox__submit > svg {
+  display: inline;
 }
