--- a/src/style.css
+++ b/src/style.css
@@ -525,9 +525,11 @@ html[data-theme='dark'] {
   color: var(--docsearch-muted-color);
 }
 
-/* No Results - Empty Screen */
+/* No Results - Start Screen - Error Screen */
 
-.DocSearch-NoResults, .DocSearch-EmptyScreen {
+.DocSearch-NoResults,
+.DocSearch-StartScreen,
+.DocSearch-ErrorScreen {
   width: 80%;
   margin: 0 auto;
   text-align: center;
