--- a/src/style.css
+++ b/src/style.css
@@ -444,6 +444,20 @@ html[data-theme='dark'] {
   padding-bottom: 4px;
 }
 
+.DocSearch-Hit--deleting {
+  transition: all 500ms cubic-bezier(0.88, -0.05, 0.85, 0.2);
+  opacity: 0;
+  transform: translateX(50%);
+  transform-origin: right;
+}
+
+.DocSearch-Hit--favoriting {
+  transition: all 500ms cubic-bezier(0.88, -0.05, 0.85, 0.2);
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: bottom;
+}
+
 .DocSearch-Hit a {
   display: block;
   border-radius: 4px;
